--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jade": "~1.11.0",
     "jsonwebtoken": "^9.0.1",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.9.4",
     "nodemon": "^3.0.1"
   }
 }
